--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,16 @@
-.App {
-  text-align: center;
+h2{
+  font-family: 'Anton', sans-serif;
+  word-spacing: 5px;
+  padding:20px;
+  color: black;
+  font-size : 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.todoapp{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  height: 660px;
+  margin: 0;
+  overflow: auto;
 }
 
 @keyframes App-logo-spin {
