--- a/src/Components/Task.css
+++ b/src/Components/Task.css
@@ -24,8 +24,12 @@
 
 .button{
     width: 60px;
+    height: 50px;
     border: none;
-    background-color: aqua;
+    color:acqua;
+    border-radius: 10px;
+    margin: 5px;
+    font-size: 15px;
 }
 
 .trash-btn{
